goods 코드 짬